--- a/desafioResponsive1/index.html
+++ b/desafioResponsive1/index.html
@@ -28,6 +28,9 @@
             </div>
             <div class="desafio3">
                 <p>Proximamente</p>
+            </div>
+            <div class="desafio4">
+                <p>Proximamente</p>
 
             </div>
         </div>
